[build-system]
requires = ["setuptools>=66"]

[project]
name = 'TensorTSL'
requires-python = '>=3.8'
version = "0.0.1"
authors = [{name='GuLab'}]
description = ""
readme = "README.md"

dependencies = [
    "pyyaml",
    "wandb",
    "torch",
    "h5py",
    "scipy",
    "scikit_learn",
    "transformers",
    "sympy",
    "tensorly",
    "mxnet",
    "pandas",
    "einops",
    "geopandas",
    "matplotlib",
    "mxboard",
    "numpy",
    "pyodbc",
    "pytest",
    "reformer_pytorch",
    "Shapely",
    "torch_geometric",
    "tqdm",
    "wfdb"
]

[tool.setuptools]
py-modules = []
